Testing robots.txt parsing